api: refactoring
- fix namings
- restructure open-api config by domains
- fix logger messages
